decode base64 embeddings

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "find": "^0.3.0",
     "fs-extra": "^11.1.0",
+    "js-base64": "^3.7.5",
     "jsonfile": "^6.1.0",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
